fix: search visibility issue resolved, z-index issue resolved

--- a/webapp/src/app/search-popup/search-popup.component.scss
+++ b/webapp/src/app/search-popup/search-popup.component.scss
@@ -7,7 +7,11 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: 99999;
+  z-index: 99998;
+
+  &.invisible {
+    display: none;
+  }
 
   &.visible {
     opacity: 1;
